# jax-rtrl

./: README.md  analyze_main.py  compare_main.py  cross_compare_main.py  jupyter_notebook.py  pyproject.toml
cluster/: __init__.py  close_jupyter_notebook.py  process_results.py  start_jupyter_notebook.py  submit_jobs.py  sync_cluster.py
continual_learning/: Continual_Learning.py  Duncker_Method.py  Synaptic_Intelligence.py  __init__.py
core/: RNN.py  Simulation.py  __init__.py
dynamics/: Dynamics.py  __init__.py  checkpoint_funcs.py  distances.py  dynamics_utils.py  feature_space.py  metrics.py  topology.py  track_fixed_points.py
functions/: Function.py  __init__.py  identity.py  mean_squared_error.py  relu.py  sigmoid.py  sigmoid_cross_entropy.py  softmax.py  softmax_cross_entropy.py  softplus.py  tanh.py
gen_data/: Add_Task.py  Cts_Integration_Task.py  Delay_Nonmatch_Task.py  Discrete_Integration_Task.py  Fixed_Point_Transition_Task.py  Flip_Flop_Task.py  Mimic_RNN.py  Multi_Task.py  Sensorimotor_Mapping.py  Sequential_MNIST.py  Sine_Wave.py  __init__.py  gen_data_utils.py
learning_algorithms/: DNI.py  Efficient_BPTT.py  Future_BPTT.py  KF_RTRL.py  KeRNL.py  Learning_Algorithm.py  List_of_Gradients.py  Miconi_REINFORCE.py  Only_Output_Weights.py  REINFORCE.py  RFLO.py  RTRL.py  Random_Noise_Gradients.py  Reverse_KF_RTRL.py  Stochastic_Algorithm.py  UORO.py  __init__.py
optimizers/: Adam.py  Optimizer.py  SGD_Momentum.py  Stochastic_Gradient_Descent.py  __init__.py
plotting/: State_Space_Analysis.py  __init__.py  checkpoint_plots.py  misc.py
(+15 files in other folders)
